CSS/contact.css
/* CSS for a 5-color palette */

:root {
    --color1: #000000; /* Black */
    --color2: #c2ee0a; /* Yellow 1 */
    --color3: #ccfe06; /* Yellow 2 */
    --color4: #eceff1; /* White 1 */
    --color5: #ffffff; /* White 2 */
  }
  

  /* Codeb below is for new nav bar prototype */

  body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #000000;
    color: #eceff1;
}

header {
    background-color: transparent;
    color: #ecf0f100;
    padding: 10px 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#logo-container {
    display: flex;
    align-items: center;
    color: #ecf0f1;
}

#logo {
    max-width: 60px;
    max-height: 60px;
    margin-right: 10px;
}

h1 {
    margin: 0;
    font-size: 1.5em;
}

#search-container {
    display: flex;
    align-items: center;
}

#search-bar {
  padding: 8px;
  margin-right: 10px;
  border: 1px solid #ecf0f1;
  border-radius: 4px;
}

#search-button {
    background-color: #ecf0f1;
    outline: #ecf0f1;
    color: #000000;
    border: none;
    padding: 8px 12px;
    border-radius: 4px;
    cursor: pointer;
}

nav {
    display: flex;
}

nav a {
    color: #ecf0f1;
    text-decoration: none;
    margin: 0 15px;
    font-weight: bold;
    transition: color 0.3s ease-in-out;
}

nav a:hover {
    color: #ccfe06;
}

#cart-container {
    position: relative;
}

#cart-icon {
    max-width: 30px;
    cursor: pointer;
}

#cart-count {
    position: absolute;
    top: -8px;
    right: -8px;
    background-color: #ccfe06;
    color: #000000;
    font-size: 12px;
    border-radius: 50%;
    padding: 4px 8px;
}



.contatc-form-container {
    max-width: 600px;
    margin: 50px auto;
    background-color: #fff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

form {
    display: grid;
    gap: 15px;
}

label {
    font-weight: bold;
}

input,
textarea {
    width: 100%;
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 4px;
}

input[type="submit"] {
    background-color: #ccfe06;
    color: #000000;
    cursor: pointer;
    padding: 10px;
    border: none;
    border-radius: 4px;
}









/* Code below is for the Footer */

footer {
    background-color: #ccfe06;
    color: #333;
    padding: 20px 20px;
    margin-top: auto;
  }
  
  .footer-container {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
  }
  
  .footer-links {
    display: flex;
  }
  
  .footer-links a {
    color: #333;
    text-decoration: none;
    margin: 0 15px;
    font-weight: bold;
  }
  
  .footer-links a:hover {
    color: #ecf0f1;
  }

